<resources>
    <string name="app_name">MigStatus</string>

    <string name="not_using_case_number">Not case setup</string>
    <string name="question1">1</string>
    <string name="use_case_number">Use Application Number</string>
    <string name="application_number">Application number</string>

    <array name="case_status_types">
        <item>Application\nreceived</item>
        <item>Decision\npending</item>
        <item>A decision\nhas been made</item>
    </array>
    <string name="check_case_button">OK</string>

    <string name="case_number">Case Number</string>
    <string name="check_number">Check Number</string>
    <string name="waiting_time_launcher_button_text">Setup Waiting Time</string>
    <string name="no_number_info_dialog">
        Your application number is only stored on your device and is only used to query
        the Swedish Migration Agency\'s website to get the status of your application.
    </string>
    <string name="ok">OK</string>
    <string name="not_setup">Setup application</string>
    <string name="set_date">Set Application Date</string>
    <string name="set_your_application_date">Set date of application</string>
    <string name="date_of_application_placeholder">%1$02d-%2$02d-%3$02d</string>
    <string name="error_parsing_case">Error: could not find case</string>
    <string name="loading_application_information">Downloading application information</string>
    <string name="setup_waiting_time">Setup waiting time</string>
    <string name="select_language">Select language</string>
    <string name="loading_website">Loading Questions</string>
    <string name="what_to_do_message">Please answer the questions about your application to get the average waiting time for similar applications</string>
    <string name="wrong_link_webview">This Web browser can only be used for getting the average waiting time</string>
    <string name="alpha_incorrect_state">Error: incorrect state</string>
    <string name="application_date">Application date</string>
    <string name="reload_button">Reload status</string>
    <string name="error_reload">Error reloading status</string>
    <string name="new_waiting_time_message">The Swedish Migration Agency have updated the estimated waiting time.
    </string>
    <string name="refreshed_status">Refreshed Application Status</string>
    <string name="estimated_months_placeholder">%1$d-%2$d months</string>
    <string name="estimated_months_placeholder_single_month">%1$d months</string>
    <string name="estimated_months_placeholder_single_day">%1$d days</string>
    <string name="loading...">loading…</string>
    <string name="estimated_months_string">Estimated months:</string>
    <string name="days_waited_text">Days\nwaited</string>
    <string name="days_to_decision">Estimated\ndays left</string>
    <string name="about">About</string>
    <string name="about_message"><b>About</b>
        \nThis is NOT an official application of the Swedish Migration Agency.
        \n\n<b>Privacy</b>
        \nThis application only stores information locally on your device.
        \nThe information you provide is only used to query the Swedish Migration Agency website and the
        results of those queries are formatted and shown to you.
        \n<b>Ads</b>
        \nThis Application uses AdMob which may use the advertising ID of your device to better serve targeted ads.
        \nIf you want to opt out of this please visit https://www.google.com/settings/u/0/ads/authenticated
        \n\n<b>Usage</b>
        \nThis application is still a alpha version, and it is possible and probable it won\'nt graduate to even a beta version.
        \nYou can expect frequent crashes and broken functionality as this application is build on the functionality of the Swedish Migration Agency\'s website.
        \nYou can expect some functions to be completely broken since the ability to test those functions would require the knowledge about exactly when a case would get a decision.
        \nBecause of the information provided above, check your case on the Swedish Migration Agency\'s website if you want to be sure about your case\'s status.
        \n\n<b>Legal</b>
        \nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
        \n\n<b>Libraries</b>
        This application uses JSoup (distributed under the MIT license (Copyright © 2009 - 2016 Jonathan Hedley (jonathan@hedley.net))) to parse migrationsverkets website.
        \n\n<b>About</b>
        This application was made as the final project of a mobile programming course I studied.\n\nThis application is NOT an official application of the Swedish Migration Agency.\n\nThis application was made by a person who is/was waiting for the Swedish Migration Agency to make a decision in
        his girlfriend\'s case.
        \n\n<b>Contact</b>
        \nIf you have any questions about this application you can email me at celers.dev@gmail.com
        \nAny questions regarding your case should be directed towards http://www.migrationsverket.se/English/Contact-us/Call-us.html

    </string>
    <string name="menu_unlock_change_bg">Unlock themes</string>
    <string name="change_bg">Change theme</string>
    <string name="back">Back</string>
    <string name="next">next</string>
    <string name="reset_application">Reset application</string>
    <string name="use_custom_waiting_time">Set custom waiting time</string>
    <string name="cancel">Cancel</string>
    <string name="choose_months">Choose custom waiting time in months</string>
    <string name="not_implemented_yet">This type of waiting time isn\'t implemented yet</string>
    <string name="reset_because_new_version"><b>New Version</b>
    \nThis application have been updated and all data had to be reset.
        \nI apologize for the inconvenience.
    </string>
    <string name="integer_placeholder">%1$d</string>
    <string name="percent_placeholder">%1$s%%</string>
    <string name="congratulations_on_decision">
        <b>Congratulations</b>
        \nA decision seems to have been made in your case.

        \n\nThis feature is untested because it would require me to know
        when an application would get a decision. Please let me know if you got this
        message and you didn\'t get a decision.
    </string>



    <string name="support_watch_ad">View ad to support dev</string>
    <string name="notification_text_made_decision">A decision has been made in your case</string>
    <string name="notification_title_made_decision">A decision...</string>
    <string name="settings">Settings</string>
    <string name="setting_use_custom_or_query">Waiting time mode:</string>
    <string name="set_and_use_custom_waiting_time">Set and use custom waiting time</string>
    <string name="use_migrationsverket_waiting_time">Use Migrationsverket estimated waiting time</string>
    <string name="menu_string_use_custom_waiting_time">loading</string>
    <string name="menu_string_set_custom_waiting_time">Set custom waiting time</string>
    <string name="menu_string_change_case_type">Setup Migrationverket waiting time</string>
    <string name="menu_string_use_case_type">Use migrationsverket waiting time</string>
    <string name="application_setup_ok_text">Application setup OK</string>


    <string name="lgdevice">99D6309733F78C74EAFF74EEAB06ACD1</string>
    <string name="ad_unit_id">ca-app-pub-1707701136705466/2585605833</string>
    <string name="ad_unit_id_interstitial_ad">ca-app-pub-1707701136705466/4062339030</string>
    <string name="banner_ad_unit_id">ca-app-pub-1707701136705466/2585605833</string>

    <string name="english">English</string>
    <string name="swedish">Svenska</string>
    <string name="privacy_policy_menu">Privacy Policy</string>
    <string name="ok_privacypolicy">You need to agree to the privacy policy to use this application.
        \n\nThe privacy policy can be read here:
        \nhttps://celdev.github.io/MigStat/
    </string>
    <string name="agree_to_pp">Agree</string>
    <string name="enter_number">Enter your application number</string>

</resources>
