<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/about"
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_help"
        app:showAsAction="always"/>
    <item android:title="@string/privacy_policy_menu"
        android:id="@+id/menu_privacy" />
    <item android:title="@string/menu_string_use_custom_waiting_time"
        android:id="@+id/menu_use_custom_waiting_time" />
    <item android:title="@string/menu_string_set_custom_waiting_time"
        android:id="@+id/menu_set_custom_waiting_time" />
    <item android:title="@string/menu_string_change_case_type"
        android:id="@+id/menu_set_case_type" />
    <item android:title="@string/menu_string_use_case_type"
        android:id="@+id/menu_use_migrationverket_waiting_time" />
    <item android:title="@string/menu_unlock_change_bg"
        android:id="@+id/menu_unlock_theme" android:enabled="true"/>
    <item android:title="@string/change_bg"
        android:id="@+id/menu_change_bg" android:enabled="false" />
    <item android:title="@string/reset_application"
        android:id="@+id/menu_reset_application" />
</menu>