<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.celdev.migstat.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_layout">

        <Switch
            android:text="@string/use_case_number"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/use_number_switch"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="39dp"
             />

        <ViewSwitcher
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/replaceable_application_number_view"
            android:layout_below="@+id/use_number_switch">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/use_number_view">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:id="@+id/case_or_check_group"
                    android:layout_centerHorizontal="true"
                    >

                    <RadioButton
                        android:text="@string/case_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_marginEnd="@dimen/radio_button_margin"
                        android:id="@+id/case_radio_button"
                        android:layout_marginRight="@dimen/radio_button_margin" />

                    <RadioButton
                        android:text="@string/check_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/check_radio_button" />
                </RadioGroup>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_field"
                    android:hint="@string/application_number"
                    android:inputType="numberSigned"
                    android:layout_below="@+id/case_or_check_group"
                    />


                <Button
                    android:text="@string/check_case_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/number_field"
                    android:id="@+id/check_status_button"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:layout_below="@+id/number_field"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="12dp"
                    tools:ignore="UseCompoundDrawables"
                    android:id="@+id/setup_application_ok_text"
                    android:layout_alignParentLeft="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ok"
                        android:contentDescription="@string/ok" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application_setup_ok_text"
                        android:id="@+id/application_setup_text"
                        android:paddingTop="4dp"
                        />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/no_number_view">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_date"
                    android:id="@+id/set_application_date_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_application_date_text"
                    android:gravity="center"
                    android:textSize="@dimen/mid_text"
                    android:layout_below="@id/set_application_date_button"
                    android:text="@string/set_your_application_date"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/after_set_date_button"
                    android:layout_below="@+id/set_application_date_text"
                    android:layout_alignParentEnd="true"
                    android:enabled="false"
                    android:text="@string/ok"
                    android:layout_alignParentRight="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:layout_below="@+id/after_set_date_button"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="12dp"
                    tools:ignore="UseCompoundDrawables"
                    android:id="@+id/set_date_application_ok_text"
                    android:layout_alignParentLeft="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ok"
                        android:contentDescription="@string/ok" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/application_setup_ok_text"
                        android:paddingTop="4dp"
                        />
                </LinearLayout>

            </RelativeLayout>

        </ViewSwitcher>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_layout"
        android:layout_below="@+id/top_layout"
        android:layout_marginTop="@dimen/layout_spacing">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/image_button_edge_margin"
            android:layout_marginStart="@dimen/image_button_edge_margin"
            android:id="@+id/setup_waiting_time_layout"
            >

            <TextView
                android:text="@string/setup_waiting_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/mid_text_size"
                android:gravity="center"
                android:id="@+id/text_setup_waiting_time_type_big" />

            <TextView
                android:text="@string/select_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_setup_waiting_time_type_big"
                android:textSize="@dimen/sm_text_size"
                android:gravity="center"
                android:id="@+id/text_setup_waiting_time_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flag_button_layout"
                android:orientation="horizontal"
                android:layout_below="@id/text_setup_waiting_time_type">
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/waitingtime_launcher_eng"
                    android:drawableTop="@drawable/ic_flag_of_the_united_kingdom"
                    android:text="@string/english" />

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_flag_of_sweden"
                    android:id="@+id/waitingtime_launcher_swe"
                    android:text="@string/swedish" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/custom_waitingtime_button"
                android:text="@string/use_custom_waiting_time"
                android:layout_below="@id/flag_button_layout"
                android:enabled="false"
                />




        </RelativeLayout>

    </RelativeLayout>




</RelativeLayout>
